2007-02-22 TADA Tadashi <sho@spc.gr.jp>
	* tdiary.conf.beginner: add some spam and referer data.
	* filter/spam.rb: spam when referer has a fragment.
	* rename linkcheck.rb to spamlinkcheck.rb in filter.
	* plugin/10spamfilter.rb, filter/spamlinkcheck.rb: add options of
	TrackBack linkcheck.

2007-02-20 TADA Tadashi <sho@spc.gr.jp>
	* tdiary.rb: raise error when TrackBack has been filtered.
	* add new filter linkcheck.rb.

2007-02-19 TADA Tadashi <sho@spc.gr.jp>
	* theme/base.css: add about edit-today plugin.

2007-02-18 TADA Tadashi <sho@spc.gr.jp>
	* plugin/05referer.rb: move code of checking DefaultIO.

2007-02-10 TADA Tadashi <sho@spc.gr.jp>
	* tdiary.rb: add remove_tag method into Plugin.

2007-02-07 TADA Tadashi <sho@spc.gr.jp>
	* tdiary.rb: rewind about proxy.
	* tdiary.conf.*: add about @options['proxy'].
	* doc/HOWTO-use-plugin.html: add about @options['proxy']
	* tdiary/wiki_style.rb: escape single quote in expand parameters of plugins.

2007-02-06 TADA Tadashi <sho@spc.gr.jp>
	* tdiary.rb: @options['proxy'] set to ENV['HTTP_PROXY'] in Plugin.
	* plugin/05referer.rb: DefaultIO detective code change 'class' to 'String'.

2007-02-06 zunda <zunda at freeshell.org>
	* tdiary.rb: reverting the local change. Sorry.

2007-02-06 zunda <zunda at freeshell.org>
	* tdiary.rb: stop checking tsukkomi once it has been made
	invisible by a filter

2007-01-31 TADA Tadashi <sho@spc.gr.jp>
	* skel/mail.rtxt*: add TSUKKOMI display status, 'shown' or 'hidden'.

2007-01-30 TADA Tadashi <sho@spc.gr.jp>
	* filter/spamakismet.rb: force hide TSUKKOMIs. Because Akismet judge
	Japanese TSUKKOMI to spam sometime.

2007-01-29 TADA Tadashi <sho@spc.gr.jp>
	* filter/spamakismet.rb: add spam filter using Akismet <http://akismet.com/>.

2007-01-26 TADA Tadashi <sho@spc.gr.jp>
	* filter/spam.rb: split RBL list by '\n' -> '[\r\n]+'.

2007-01-26 SHIBATA Hiroshi <h-sbt@nifty.com>
	* filer/spam.rb,plugin/10spamfilter.rb: fix spamfilter.max_rate float to interger.
